--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,6 @@ springdoc.swagger-ui.path=/swagger-ui-custom.html
 # App Properties
 jwtCookieName=magicVolley
 jwtSecret= ======================magicVolley=Spring===========================
-jwtExpirationMs=86400000
+jwtExpirationMs=300000
 
 
