--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,4 +22,6 @@ jwtCookieName=magicVolley
 jwtSecret= ======================magicVolley=Spring===========================
 jwtExpirationMs=300000
 
+media.prefix.url=/magicvolley
+
 
