telegramBot reserved camp guestUser

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,4 +24,7 @@ jwtExpirationMs=300000
 
 media.prefix.url=/magicvolley
 
+bot.name=magicVolleyTest_bot
+bot.token=7033435036:AAE2ryekOHgdXVAMDhJHDrdQaQv7Ni0ePuE
+
 
