--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <description>magicvolley</description>
     <properties>
         <java.version>17</java.version>
+        <telegram.version>6.5.0</telegram.version>
     </properties>
 
     <dependencies>
@@ -128,6 +129,18 @@
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.6.0</version>
+        </dependency>
+
+        <!-- Telegram API -->
+        <dependency>
+            <groupId>org.telegram</groupId>
+            <artifactId>telegrambots</artifactId>
+            <version>${telegram.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.telegram</groupId>
+            <artifactId>telegrambotsextensions</artifactId>
+            <version>${telegram.version}</version>
         </dependency>
 
     </dependencies>
