--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,25 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
+    <profiles>
+        <profile>
+            <id>development</id>
+            <properties>
+                <spring-active.profile>development</spring-active.profile>
+            </properties>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+        </profile>
+        <profile>
+            <id>production</id>
+            <properties>
+                <spring-active.profile>prod</spring-active.profile>
+            </properties>
+        </profile>
+
+    </profiles>
+
     <groupId>ru.magicvolley</groupId>
     <artifactId>magicvolley</artifactId>
     <version>0.0.1-SNAPSHOT</version>
@@ -146,6 +165,13 @@
     </dependencies>
 
     <build>
+
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
