--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -15,6 +15,7 @@ spring.servlet.multipart.max-file-size=300MB
 spring.servlet.multipart.max-request-size=300MB
 
 spring.liquibase.change-log=classpath:db/changelog/changelog.xml
+apply.dev-seed.migration=false
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui-custom.html
 
