--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.servlet.multipart.max-file-size=300MB
 spring.servlet.multipart.max-request-size=300MB
 
+spring.profiles.active=development
 spring.liquibase.change-log=classpath:db/changelog/changelog.xml
+apply.dev-seed.migration=true
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui-custom.html
 
