init development profile

--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -7,14 +7,13 @@ spring.datasource.password=postgres
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-#logging.level.org.hibernate.SQL=DEBUG
-#logging.level.org.hibernate.SQL_SLOW=INFO
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.SQL_SLOW=INFO
 spring.jpa.hibernate.ddl-auto=update
 
 spring.servlet.multipart.max-file-size=300MB
 spring.servlet.multipart.max-request-size=300MB
 
-spring.profiles.active=development
 spring.liquibase.change-log=classpath:db/changelog/changelog.xml
 apply.dev-seed.migration=true
 springdoc.api-docs.path=/api-docs
