--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,8 +1,8 @@
-server.port=
-spring.datasource.url=
+server.port=8081
+spring.datasource.url=${DB_CONNECTION_STRING}
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
@@ -19,11 +19,12 @@ springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui-custom.html
 
 # App Properties
-jwtCookieName=
-jwtSecret=
-jwtExpirationMs=
+jwtCookieName=${JWT_COOKIE_NAME}
+jwtSecret=${JWT_SECRET}
+jwtExpirationMs=300000
 
-media.prefix.url=
+media.prefix.url=/magicvolley
 
-bot.name=
-bot.token=
+bot.name=${TG_BOT_NAME}
+bot.token=${TG_BOT_TOKEN}
+apply.dev-seed.migration=false
