--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -1,6 +1,6 @@
 server.port=8081
-#spring.datasource.url=jdbc:postgresql://localhost:54/postgres?currentSchema=magic_volley
-spring.datasource.url=jdbc:postgresql://localhost:9081/public
+#spring.datasource.jdbc-url=jdbc:postgresql://localhost:5432/postgres?currentSchema=magic_volley
+spring.datasource.jdbc-url=jdbc:postgresql://localhost:9081/public
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=postgres
@@ -15,7 +15,7 @@ spring.servlet.multipart.max-file-size=300MB
 spring.servlet.multipart.max-request-size=300MB
 
 spring.liquibase.change-log=classpath:db/changelog/changelog.xml
-apply.dev-seed.migration=true
+spring.liquibase.parameters.apply.dev-seed.migration=true
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui-custom.html
 
