--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
 server.port=8081
-spring.datasource.url=${DB_CONNECTION_STRING}
+spring.datasource.jdbc-url=${DB_CONNECTION_STRING}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
@@ -14,7 +14,7 @@ spring.servlet.multipart.max-file-size=300MB
 spring.servlet.multipart.max-request-size=300MB
 
 spring.liquibase.change-log=
-apply.dev-seed.migration=false
+spring.liquibase.parameters.apply.dev-seed.migration=false
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui-custom.html
 
@@ -27,4 +27,3 @@ media.prefix.url=/magicvolley
 
 bot.name=${TG_BOT_NAME}
 bot.token=${TG_BOT_TOKEN}
-apply.dev-seed.migration=false
