fix bp application

--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -1,6 +1,6 @@
 server.port=8081
 #spring.datasource.jdbc-url=jdbc:postgresql://localhost:5432/postgres?currentSchema=magic_volley
-spring.datasource.jdbc-url=jdbc:postgresql://localhost:9081/public
+spring.datasource.jdbcUrl=jdbc:postgresql://localhost:9081/public
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=postgres
