--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
 server.port=8081
-spring.datasource.jdbc-url=${DB_CONNECTION_STRING}
+spring.datasource.jdbcUrl=${DB_CONNECTION_STRING}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
