fix prod application

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -6,6 +6,7 @@ spring.datasource.password=${DB_PASSWORD}
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.naming-strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
 logging.level.org.hibernate.SQL=INFO
 logging.level.org.hibernate.SQL_SLOW=INFO
 spring.jpa.hibernate.ddl-auto=update
