--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -14,7 +14,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.servlet.multipart.max-file-size=300MB
 spring.servlet.multipart.max-request-size=300MB
 
-spring.liquibase.change-log=
+spring.liquibase.change-log=classpath:db/changelog/changelog.xml
 spring.liquibase.parameters.apply.dev-seed.migration=false
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui-custom.html
