cors bean add SecurityConfig

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -25,6 +25,7 @@ jwtSecret=${JWT_SECRET}
 jwtExpirationMs=300000
 
 media.prefix.url=/magicvolley
+cors.allowed-origins=https://magicvolley.ru
 
 bot.name=${TG_BOT_NAME}
 bot.token=${TG_BOT_TOKEN}
