cors bean add SecurityConfig

--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -25,6 +25,7 @@ jwtSecret= ======================magicVolley=Spring===========================
 jwtExpirationMs=300000
 
 media.prefix.url=/magicvolley
+cors.allowed-origins=*
 
 bot.name=magicVolleyTest_bot
 bot.token=7033435036:AAG4Mhfg0HyZWCdBI3qOkhCQPyfQUp-P4Lk
