--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -26,6 +26,7 @@ jwtExpirationMs=300000
 
 media.prefix.url=/magicvolley
 cors.allowed-origins=*
+domainCookie=localhost
 
 bot.name=magicVolleyTest_bot
 bot.token=7033435036:AAG4Mhfg0HyZWCdBI3qOkhCQPyfQUp-P4Lk
