--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -26,6 +26,7 @@ jwtExpirationMs=300000
 
 media.prefix.url=/magicvolley
 cors.allowed-origins=https://magicvolley.ru
+domainCookie=magicvolley.ru
 
 bot.name=${TG_BOT_NAME}
 bot.token=${TG_BOT_TOKEN}
