--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -24,7 +24,7 @@ jwtCookieName=${JWT_COOKIE_NAME}
 jwtSecret=${JWT_SECRET}
 jwtExpirationMs=300000
 
-media.prefix.url=/magicvolley
+media.prefix.url=magicvolley.ru/magicvolley
 cors.allowed-origins=https://magicvolley.ru
 domainCookie=magicvolley.ru
 
