--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -22,7 +22,7 @@ springdoc.swagger-ui.path=/swagger-ui-custom.html
 # App Properties
 jwtCookieName=magicVolley
 jwtSecret= ======================magicVolley=Spring===========================
-jwtExpirationMs=300000
+jwtExpirationMs=86400000
 
 media.prefix.url=/magicvolley
 cors.allowed-origins=*
