--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -22,7 +22,7 @@ springdoc.swagger-ui.path=/swagger-ui-custom.html
 # App Properties
 jwtCookieName=${JWT_COOKIE_NAME}
 jwtSecret=${JWT_SECRET}
-jwtExpirationMs=300000
+jwtExpirationMs=86400000
 
 media.prefix.url=/magicvolley
 cors.allowed-origins=https://magicvolley.ru
