getAllNearest for home add property nearest.camp.count

--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -29,3 +29,4 @@ domainCookie=localhost
 bot.name=magicVolleyTest_bot
 bot.token=7033435036:AAG4Mhfg0HyZWCdBI3qOkhCQPyfQUp-P4Lk
 filter.past.camp=false
+nearest.camp.count=3
