bot info id user

--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -28,5 +28,6 @@ domainCookie=localhost
 
 bot.name=magicVolleyTest_bot
 bot.token=7033435036:AAG4Mhfg0HyZWCdBI3qOkhCQPyfQUp-P4Lk
-filter.past.camp=false
+filter.past.camp=true
 nearest.camp.count=3
+telegram.user.id=697146925
