fix boot telegram

--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -26,8 +26,8 @@ media.prefix.url=/magicvolley
 cors.allowed-origins=*
 domainCookie=localhost
 
-bot.name=magicVolleyTest_bot
-bot.token=7033435036:AAG4Mhfg0HyZWCdBI3qOkhCQPyfQUp-P4Lk
+bot.name=Volley62Bot
+bot.token=7971754242:AAEOhn8cfm_sae5rPBEbL5TKj-itVDXKcAs
 filter.past.camp=true
 nearest.camp.count=3
 telegram.user.id=697146925
