--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.3.1</version>
+        <version>3.5.7</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -30,13 +30,20 @@
 
     <groupId>ru.magicvolley</groupId>
     <artifactId>magicvolley</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.2-SNAPSHOT</version>
 
     <name>magicvolley</name>
     <description>magicvolley</description>
     <properties>
         <java.version>17</java.version>
-        <telegram.version>6.5.0</telegram.version>
+        <telegram.version>6.9.7.1</telegram.version>
+        <springdoc-openapi-starter-webmvc-ui.version>2.6.0</springdoc-openapi-starter-webmvc-ui.version>
+        <io.zonky.test.postgres.version>2.0.0</io.zonky.test.postgres.version>
+        <io.zonky.test.version>2.6.0</io.zonky.test.version>
+        <embedded-postgres-binaries-bom.version>14.2.0</embedded-postgres-binaries-bom.version>
+        <liquibase-core.version>5.0.1</liquibase-core.version>
+        <jaxb-api.version>2.3.1</jaxb-api.version>
+        <jjwt.version>0.11.5</jjwt.version>
     </properties>
 
     <dependencies>
@@ -82,33 +89,27 @@
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-api</artifactId>
-            <version>0.11.5</version>
+            <version>${jjwt.version}</version>
         </dependency>
 
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-impl</artifactId>
-            <version>0.11.5</version>
+            <version>${jjwt.version}</version>
             <scope>runtime</scope>
         </dependency>
 
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-jackson</artifactId>
-            <version>0.11.5</version>
+            <version>${jjwt.version}</version>
             <scope>runtime</scope>
         </dependency>
 
         <dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
-            <version>2.3.1</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <version>42.7.3</version>
+            <version>${jaxb-api.version}</version>
         </dependency>
 
         <dependency>
@@ -120,34 +121,33 @@
         <dependency>
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
-            <version>4.27.0</version>
+            <version>${liquibase-core.version}</version>
         </dependency>
 
         <dependency>
             <groupId>io.zonky.test.postgres</groupId>
-            <artifactId>embedded-postgres-binaries-bom</artifactId>
-            <version>16.2.0</version>
+            <artifactId>embedded-postgres-binaries-darwin-arm64v8</artifactId>
+            <version>${embedded-postgres-binaries-bom.version}</version>
             <type>pom</type>
         </dependency>
 
         <dependency>
             <groupId>io.zonky.test</groupId>
             <artifactId>embedded-postgres</artifactId>
-            <version>2.0.7</version>
-            <scope>test</scope>
+            <version>${io.zonky.test.postgres.version}</version>
         </dependency>
 
         <dependency>
             <groupId>io.zonky.test</groupId>
-            <artifactId>embedded-postgres</artifactId>
-            <version>2.0.7</version>
-            <scope>compile</scope>
+            <artifactId>embedded-database-spring-test</artifactId>
+            <version>${io.zonky.test.version}</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            <version>2.6.0</version>
+            <version>${springdoc-openapi-starter-webmvc-ui.version}</version>
         </dependency>
 
         <!-- Telegram API -->
